<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	>
	<TextView
	    android:id="@+id/label_from"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/builder_io_label_from"
	    />
	<Spinner
	    android:id="@+id/from_direction"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    />
	<Spinner
	    android:id="@+id/from_room"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    />
	<TextView
	    android:id="@+id/label_to"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/builder_io_label_to"
	    />
	<Spinner
	    android:id="@+id/to_direction"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    />
	<Spinner
	    android:id="@+id/to_room"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    />
	<Switch
	    android:id="@+id/two_way"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/builder_io_label_two_way"
	    />
</LinearLayout>